<resources>
    <string name="app_name">Sweet Dream</string>
    //Title Menu on Drawer-------------------------------------------------------------------------------
    <string name="header_my_books">My Books</string>
    <string name="header_favorites">Favorites</string>
    <string name="nav_item_features">Features</string>
    <string name="nav_item_myBooks">My Books</string>
    <string name="nav_item_myDownloads">My Downloads</string>
    <string name="nav_item_favorites">Favorites</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_about">About</string>
    <string name="drawer_header_text">Sweet Dream</string>
    //Title Menu on ActionBar-------------------------------------------------------------------------------
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    //String LoginActivity
    <string name="forgotPass"><u>Forgot password, click here!</u></string>
    //String About
    <string name="copyRight">Copyright Project II 2015 - Sweet Dream</string>
    <string name="contentAbout">FPT Software is a part of FPT Corporation, the largest IT Corporation in Vietnam with over US$1.65 billion revenue and 22,000 employees. With focus on RandD activities to improve the quality of services, FPT Software has been serving over 350 customers worldwide, of which nearly 40 are Fortune 500 in the industries of manufacturing, semiconductors, healthcare, utility, financial services, content media and entertainment and more Qualified with CMMI 5 and ISO 27001:2013, the company delivers world-class services in Cloud, Big Data, Mobility, Legacy Migration, Application Services, Embedded System, Package Implementation, and BPO services globally from delivery centers across the United States, Japan, Europe, Australia, Vietnam and the Asia Pacific region.</string>
    //String MainActivity-------------------------------------------------------------------------------
    //String StoryDetailsActivity-------------------------------------------------------------------------------
    <string name="checkMoney">You not enough money to paid this story! Click "Get Story" for get some more coin</string>
    //String PlayingActivity-------------------------------------------------------------------------------

    //String Dialog ForgotPass-------------------------------------------------------------------------------
    <string name="offer_share_via">Share app</string>
    <string name="open_email_via">Check Email With</string>

    //String title Activity-------------------------------------------------------------------------------
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_get_coin">Get Coin</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_update_account_information">Update Account Information</string>
    <string name="title_activity_story_details">Story Details</string>
    <string name="title_activity_playing_page">Playing Page</string>
    <string name="title_activity_payVT">Pay Storys</string>
    //String UpdateAccActivity-------------------------------------------------------------------------------
    <string name="changePass"><u>Change Password</u></string>

   //Facebook app ID-------------------------------------------------------------------------------
    <string name="facebook_app_id">1704750209756004</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>