<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_features"
            android:checked="true"

            android:icon="@drawable/ic_features"
            android:title="@string/nav_item_features" />
        <item
            android:id="@+id/navigation_item_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/nav_item_favorites" />
        <item
            android:id="@+id/navigation_item_myBooks"
            android:icon="@drawable/ic_mybooks"
            android:title="@string/nav_item_myBooks" />
    </group>

    <item android:title="@string/nav_sub_menu">
        <menu>

        <item
                android:id="@+id/navigation_item_about"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_sub_menu_about" />
        </menu>
    </item>

</menu>